<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.finder.harlequinapp.valiante.harlequin.Registration"
    android:background="#ffffff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/userName"
            android:hint="@string/nome"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textSize="18sp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/userSurname"
            android:hint="@string/cognome"
            android:textSize="18sp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/userCity"
            android:hint="@string/citt"
            android:textSize="18sp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/userAge"
            android:hint="@string/et"
            android:textSize="18sp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/userEmail"
            android:hint="@string/inserisci_la_tua_email"
            android:textSize="18sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/userPassword"
            android:hint="@string/inserisci_una_password"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/userPasswordConfirm"
            android:hint="@string/conferma_la_password"/>

        <Button
            android:text="@string/registrati_ad_harlee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/regButton"
            android:typeface="normal"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:fontFamily="sans-serif"
            android:textSize="20sp"/>

    </LinearLayout>

</RelativeLayout>
