<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingTop="16dp"
    tools:context="com.finder.harlequinapp.valiante.harlequin.MainActivity"
    android:background="@drawable/main_gradient"

    >
    <android.support.v4.widget.NestedScrollView
        android:foregroundGravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/app_name"
                fontPath="fonts/Hero.otf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/userDataLayout"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/pureWhite"
                android:textSize="66sp"
                tools:ignore="MissingPrefix" />


            <LinearLayout
                android:id="@+id/userDataLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/signIn"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="30dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/pureWhite"
                    app:hintTextAppearance="@style/textInputLayoutLabel">

                    <EditText

                        android:id="@+id/emailField"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="6dp"
                        android:ems="10"
                        android:hint="Email..."
                        android:inputType="textEmailAddress"
                        android:padding="12dp"
                        android:textAppearance="@android:style/TextAppearance.Material"
                        android:textColor="@color/pureWhite"
                        android:theme="@style/MyEditText" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/pureWhite"
                    app:hintTextAppearance="@style/textInputLayoutLabel">

                    <EditText
                        android:id="@+id/passwordField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Password..."
                        android:inputType="textPassword"
                        android:padding="12dp"
                        android:textAppearance="@android:style/TextAppearance.Material"
                        android:textColor="@color/pureWhite"
                        android:theme="@style/MyEditText" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                fontPath="fonts/Hero.otf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/signIn"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:paddingBottom="14dp"
                android:paddingTop="14dp" />

            <TextView
                fontPath="fonts/Hero.otf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="oppure"
                android:textColor="@color/pureWhite"
                tools:ignore="MissingPrefix" />

            <Button
                android:id="@+id/signUp"
                fontPath="fonts/Hero.otf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"
                android:background="@drawable/transparent_button_login"
                android:elevation="8dp"
                android:padding="8dp"
                android:text="@string/registrati"
                android:textAllCaps="false"
                android:textAppearance="@android:style/TextAppearance.Material.Button"
                android:textColor="#ffffff"
                android:textStyle="normal|bold"
                tools:ignore="MissingPrefix" />

            <Button
                android:id="@+id/signIn"
                fontPath="fonts/Hero.otf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/signUp"
                android:layout_alignParentStart="true"
                android:background="@drawable/transparent_button_register"
                android:elevation="8dp"
                android:padding="8dp"
                android:text="@string/esegui_l_accesso"
                android:textAllCaps="false"
                android:textAppearance="@android:style/TextAppearance.Material.Button"
                android:textColor="@color/cardview_light_background"
                android:textStyle="normal|bold"
                tools:ignore="MissingPrefix" />


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>